--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,21 +2,36 @@ body {
     background-color: #1e90ff;
     font-family: "Roboto", Arial, sans-serif;
     color: black;
+    text-align: center;
+    height: 100vh;
+    margin: 0;
+    padding: 10px;
 }
 
-button {
-    background-color: white;
-    color: black;
-    padding: 10px 20px;
+main {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 20px;
+}
+
+.button-row {
+    margin: 10px;
+}
+
+.button {
+    padding: 20px 40px;
+    font-size: 24px;
+    background-color: #ffffff;
     border: none;
+    border-radius: 10px;
     cursor: pointer;
-    border-radius: 5px;
-}
-
-button:hover {
-    background-color: #f0f0f0;
-}
-
-button:active {
-    background-color: #d3d3d3;
+    margin-bottom: 10px;
 }
