Create Withdrawal functionality with hardcoded data of account
Signed-off-by: Vladyslav Pelykh <vspelykh@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,9 +33,8 @@
         </div>
     </div>
     <div class="button-container">
-        <div class="button-row">
-            <button class="button">Withdraw money</button>
-        </div>
+        <button class="button" onclick="window.location.href='/withdraw/amount'">Withdraw money</button>
+
         <div class="button-row">
             <button class="button">Transfer to friend</button>
         </div>
