Small fixes in index page (buttons for login/logout)
Signed-off-by: Vladyslav Pelykh <vspelykh@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,11 +23,11 @@
 <main>
     <div class="button-container">
         <div class="button-row">
-            <button class="button" sec:authorize="isAuthenticated()">
-                <a th:href="@{/logout}">Put off card</a>
+            <button onclick="window.location.href='/logout'" class="button" sec:authorize="isAuthenticated()">
+                Put off card
             </button>
-            <button class="button" sec:authorize="isAnonymous()">
-                <a th:href="@{/login}">Insert card</a>
+            <button onclick="window.location.href='/login'" class="button" sec:authorize="isAnonymous()">
+                Insert card
             </button>
         </div>
         <div class="button-row">
