Add transfer between accounts of one client
Signed-off-by: Vladyslav Pelykh <vspelykh@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
             </button>
         </div>
         <div class="button-row">
-            <button class="button">Transfer to me</button>
+            <button onclick="window.location.href='/transfer/accounts'" class="button">Transfer to me</button>
         </div>
         <div class="button-row">
             <button class="button">Balance</button>
@@ -41,7 +41,7 @@
         <button class="button" onclick="window.location.href='/withdraw/amount'">Withdraw money</button>
 
         <div class="button-row">
-            <button class="button">Transfer to friend</button>
+            <button onclick="window.location.href='/transfer/send'" class="button">Transfer to friend</button>
         </div>
         <div class="button-row">
             <button class="button">Admin</button>
