Add balance feature, add docs to services and controllers
Signed-off-by: Vladyslav Pelykh <vspelykh@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
             <button onclick="window.location.href='/transfer/accounts'" class="button">Transfer to me</button>
         </div>
         <div class="button-row">
-            <button class="button">Balance</button>
+            <button onclick="window.location.href='/balance'" class="button">Balance</button>
         </div>
     </div>
     <div class="button-container">
