--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Transfer</title>
+    <link rel="stylesheet" href="/css/styles.css">
+
 </head>
 <body>
-
+<h1>Money Transfer</h1>
+<form  action="/transfer/process" method="post">
+    <label for="amount">Amount:</label>
+    <input type="number" step="0.01" name="amount" id="amount" required>
+    <br>
+    <label for="accountTo">Account To:</label>
+    <input type="text" name="accountTo" id="accountTo" required>
+    <br>
+    <input type="submit" value="Transfer">
+</form>
 </body>
 </html>
