--- a/src/main/resources/templates/amount.html
+++ b/src/main/resources/templates/amount.html
@@ -8,6 +8,13 @@
 <body>
 <h1>Enter an amount to withdraw</h1>
 
+<div>
+    Available banknote denominations <!--/*@thymesVar id="denominations" type="java.util.List"*/-->
+    <span th:each="denomination, iterStat : ${denominations}">
+            <span th:text="${denomination}"></span>
+            <span th:if="${!iterStat.last}">, </span>
+        </span>
+</div>
 <form th:action="@{/withdraw/strategies}" method="post">
     <label for="amount">Amount:</label>
     <input type="number" id="amount" name="amount" required>
