Add tests for TransactionService, make some fixes in Repository(return Optional)
Signed-off-by: Vladyslav Pelykh <vspelykh@gmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     <div class="button-container">
         <div class="button-row">
             <button onclick="window.location.href='/logout'" class="button" sec:authorize="isAuthenticated()">
-                Put off card
+                Remove the card
             </button>
             <button onclick="window.location.href='/login'" class="button" sec:authorize="isAnonymous()">
                 Insert card
