Add tips to log in
Signed-off-by: Vladyslav Pelykh <vspelykh@gmail.com>

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,11 @@
 <body>
 <main>
     <form th:action="@{/login}" method="post">
+        <div>
+            Login: 1234567890123456
+            <br>
+            pass: pass123
+        </div>
         <div class="button-container">
             <h2>Welcome to the ATM Simulator</h2>
 
